main-youtube-clone
--INSERT--

--- a/youtube.html
+++ b/youtube.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body>
+<body >
 
     <div class="header">
         <div class="left-section">
@@ -82,6 +82,130 @@
     </div>
 
     <div class="page-format-skeleton">
+
+
+        <div class="video-format-skeleton">
+            <a class="video-links" href="https://youtu.be/Dr-y7vR7Nxc?si=vvqVURKm_nT-GdaJ">
+                <div style="position: relative;">
+                    <img class="video-pic" src="image copy 5.png">
+                    <div class="video1-time">24:20</div>
+                </div>
+                <div style="flex:1;" class="video-pic-skeleton">
+                    <div class="profile-pic">
+
+                        <img class="profile-skeleton" src="logo2.png">
+
+                    </div>
+                    <div class="video-info-skeleton">
+                        <p class="topic-skeleton">5 FREE Courses Every Average Student Must Try!</p>
+                        <p class="channel-skeleton">Ishan Sharma</p>
+                        <p class="stats-skeleton">123k views · streamed 19 days ago </p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+
+        <div class="video-format-skeleton">
+            <div style="position:relative;">
+                <img class="video-pic" src="image copy 3.png">
+                <div class="video3-time">22:30</div>
+            </div>
+            <div style="flex:1;" class="video-pic-skeleton">
+                <div>
+                    <img class="profile-skeleton" src="logo5.png">
+                </div>
+                <div class="video-info-skeleton">
+                    <p class="topic-skeleton">Learn DSA with my tips</p>
+                    <p class="channel-skeleton">CollegeMitra</p>
+                    <p class="stats-skeleton">3k views &middot streamed 1 days ago </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-format-skeleton">
+            <div style="position: relative;">
+                <img class="video-pic" src="image copy 4.png">
+                <div class="video4-time">22:19</div>
+            </div>
+            <div style="flex:1;" class="video-pic-skeleton">
+                <div>
+                    <img class="profile-skeleton" src="logo6.png">
+                </div>
+                <div class="video-info-skeleton">
+                    <p class="topic-skeleton">Leetcode Tricks and patterns</p>
+                    <p class="channel-skeleton">Getplaced</p>
+                    <p class="stats-skeleton">1 lakh views &middot streamed 3 months ago </p>
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="video-format-skeleton">
+            <div style="position: relative;">
+                <img class="video-pic" src="image2.avif">
+                <div class="video1-time">14:20</div>
+            </div>
+            <div style="flex:1;" class="video-pic-skeleton">
+                <div class="profile-pic">
+                    <img class="profile-skeleton" src="image copy.png">
+                    <div class="channel-stats">Apna College<br>
+                        20M 114k views
+                    </div>
+                </div>
+                <div class="video-info-skeleton">
+                    <p class="topic-skeleton">College essentials for first year students</p>
+                    <p class="channel-skeleton">Apna college</p>
+                    <p class="stats-skeleton">113k views &middot streamed 10 days ago </p>
+                </div>
+            </div>
+        </div>
+        <div class="video-format-skeleton">
+            <div style="position: relative;">
+                <img class="video-pic" src="image.png">
+                <div class="video1-time">2:14:20</div>
+            </div>
+            <div style="flex:1;" class="video-pic-skeleton">
+                <div class="profile-pic">
+                    <img class="profile-skeleton" src="logo4.png">
+
+                </div>
+                <div class="video-info-skeleton">
+                    <p class="topic-skeleton">Demon slayer fights</p>
+                    <p class="channel-skeleton">WatchAnime</p>
+                    <p class="stats-skeleton">43k views &middot streamed 1 days ago </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="video-format-skeleton">
+            <div style="position:relative;">
+                <img class="video-pic" src="image copy 2.png">
+                <div class="video2-time">1:18:22</div>
+            </div>
+            <div style="flex:1;" class="video-pic-skeleton">
+                <div>
+                    <img class="profile-skeleton" src="logo3.png">
+
+                </div>
+                <div class="video-info-skeleton">
+                    <p class="topic-skeleton">That Time I Got Reincarnated as a Slime the Movie: Scarlet Bond</p>
+                    <p class="channel-skeleton">Musai India</p>
+                    <p class="stats-skeleton">1 lakh views &middot streamed 10 months ago </p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
         <div class="video-format-skeleton">
             <div style="position: relative;">
                 <img class="video-pic" src="image.png">
@@ -101,60 +225,9 @@
                 </div>
             </div>
         </div>
-        <div class="video-format-skeleton">
-            <div style="position:relative;">
-                <img class="video-pic" src="image.png">
-                <div class="video2-time">8:22</div>
-            </div>
-            <div style="flex:1;" class="video-pic-skeleton">
-                <div>
-                    <img class="profile-skeleton" src="image copy.png">
-
-                </div>
-                <div class="video-info-skeleton">
-                    <p class="topic-skeleton">College essentials for first year students</p>
-                    <p class="channel-skeleton">Apna college</p>
-                    <p class="stats-skeleton">113k views &middot streamed 10 days ago </p>
-                </div>
-            </div>
-        </div>
 
 
 
-        <div class="video-format-skeleton">
-            <div style="position:relative;">
-                <img class="video-pic" src="image.png">
-                <div class="video3-time">1:22:30</div>
-            </div>
-            <div style="flex:1;" class="video-pic-skeleton">
-                <div>
-                    <img class="profile-skeleton" src="image copy.png">
-                </div>
-                <div class="video-info-skeleton">
-                    <p class="topic-skeleton">College essentials for first year students</p>
-                    <p class="channel-skeleton">Apna college</p>
-                    <p class="stats-skeleton">113k views &middot streamed 10 days ago </p>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="video-format-skeleton">
-            <div style="position: relative;">
-                <img class="video-pic" src="image.png">
-                <div class="video4-time">12:19</div>
-            </div>
-            <div style="flex:1;" class="video-pic-skeleton">
-                <div>
-                    <img class="profile-skeleton" src="image copy.png">
-                </div>
-                <div class="video-info-skeleton">
-                    <p class="topic-skeleton">College essentials for first year students</p>
-                    <p class="channel-skeleton">Apna college</p>
-                    <p class="stats-skeleton">113k views &middot streamed 10 days ago </p>
-                </div>
-            </div>
-        </div>
 
     </div>
 
